Reflectively register signal handling if available